Fix guests alignment

--- a/client/styles.css
+++ b/client/styles.css
@@ -295,9 +295,10 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
   padding-top: 0;
   padding-right: 0;
   padding-left: 0;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   color: #333333;
   font-weight: 500;
+  text-align: left;
 }
 .clicked {
   background-color: #F3F3F3
@@ -307,12 +308,12 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
   color: #333333;
   font-size: 85%;
   color: #A0A0A0;
-  float: left;
   display: inline-block;
   text-align: center;
 }
 .value.guests {
   text-align: left;
+  padding-left: 0px;
 }
 select {
   cursor: default;
